Use `Path::of`